--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -29,7 +29,7 @@ body {
 }
 
 .header div {
-    margin: 20px;
+    padding: 10px 20px 10px 20px;
 }
 
 .formulas {
@@ -91,4 +91,12 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
+}
+
+.hide {
+    display: none;
+}
+
+.selected-header {
+    background-color: lightblue;
 }
