Trying to get formulas to work

--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -100,3 +100,24 @@ input::-webkit-inner-spin-button {
 .selected-header {
     background-color: lightblue;
 }
+
+.ibu-title {
+    display: flex;
+
+}
+
+.ibu-column {
+    width: 100px;
+    padding: 2px;
+    text-align: center;
+}
+
+.hop {
+    display: flex;
+}
+
+.ibu {
+    width: 40px;
+    padding: 4px;
+    text-align: center;
+}
